test/good/ex19.cb
def main() {
    let f: fn(int, int) -> int = \x y -> x + x;
    printInt(f(420, 69));
    printString("\n");
}
