test/bad/duplicate_lamarg.cb
def main() {
    let f: fn(int, int) -> int = \x x -> x + x;
    printInt(f(420, 69));
}
